{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 9,
  "lineage": "47a7c805-6d41-cdfe-4378-899b8ee2f97f",
  "resources": [
    {
      "module": "module.module_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335616348:internet-gateway/igw-05ab3b2e530923b34",
            "id": "igw-05ab3b2e530923b34",
            "owner_id": "730335616348",
            "tags": {
              "Name": "igw_main"
            },
            "tags_all": {
              "Name": "igw_main"
            },
            "vpc_id": "vpc-00d668a15e5c7d390"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_routing_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ab3b2e530923b34",
            "id": "r-rtb-09b2737fef8a659561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b2737fef8a65956",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_igw.aws_internet_gateway.igw",
            "module.module_routing_table.aws_route_table.public_routing_table",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_routing_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335616348:route-table/rtb-09b2737fef8a65956",
            "id": "rtb-09b2737fef8a65956",
            "owner_id": "730335616348",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "igw_main"
            },
            "tags_all": {
              "Name": "igw_main"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d668a15e5c7d390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_routing_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing_table_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027ab97f7973e136e",
            "route_table_id": "rtb-09b2737fef8a65956",
            "subnet_id": "subnet-033b770e8f9935a17"
          },
          "dependencies": [
            "module.module_routing_table.aws_route_table.public_routing_table",
            "module.module_subnets.aws_subnet.public_subnets",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335616348:security-group/sg-03c6a880c9fd9be19",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-03c6a880c9fd9be19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AllowTraffic_80-443-22-3389_ports",
            "name_prefix": "",
            "owner_id": "730335616348",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00d668a15e5c7d390"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335616348:subnet/subnet-0aebb8006bdf63300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aebb8006bdf63300",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335616348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-00d668a15e5c7d390"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335616348:subnet/subnet-033b770e8f9935a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033b770e8f9935a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335616348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-00d668a15e5c7d390"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335616348:vpc/vpc-00d668a15e5c7d390",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fdb42a7097c89588",
            "default_route_table_id": "rtb-07ad37e3d9a3ba09a",
            "default_security_group_id": "sg-0de2918dd649ba527",
            "dhcp_options_id": "dopt-057a127daa174dfc9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d668a15e5c7d390",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ad37e3d9a3ba09a",
            "owner_id": "730335616348",
            "tags": {
              "Name": "vpc_main"
            },
            "tags_all": {
              "Name": "vpc_main"
            }
          }
        }
      ]
    }
  ]
}